Added the Order Service as a part of Microservice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=${PORT}
 #spring.flyway.enabled=true
 #spring.flyway.locations=classpath:db/migration
+# you are identifying this as a eureka client and if i want to interact w eureka, below is the url to hit
+eureka.client.service-url.defaultZone = ${eureka_url}
